syntax = "proto3";

option csharp_namespace = "KwikNestaIdentity.Svc.Contract.Protos";
package identity;

// IdentityService definition
service IdentityService {
  // Fetch a single user by ID
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);

  // Fetch multiple users by IDs (to avoid N+1 lookups)
  rpc BatchGetUsers (BatchGetUsersRequest) returns (BatchGetUsersResponse);
}

// --------- Messages ---------
message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message BatchGetUsersRequest {
  repeated string user_ids = 1;
}

message BatchGetUsersResponse {
  repeated User users = 1;
}

// --------- Entities ---------
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string status = 6;     // e.g., Active, Suspended
}